fix: edit z-index for Nav and Title components

--- a/src/common/components/title/Title.module.scss
+++ b/src/common/components/title/Title.module.scss
@@ -1,29 +1,32 @@
 @import "./src/common/styles/sass/variables";
 
 .title {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+  z-index: 1;
 
-    position: relative;
-    &::before {
-        content: '';
-        position: absolute;
-        bottom: -15px;
-        left: 50%;
-        transform: translate(-50%, 50%);
+  position: relative;
 
-        background: $themeColor;
-        width: 100px;
-        height: 2px;
-    }
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translate(-50%, 50%);
 
-    h2 {
-        font-family: 'Josefin Sans', sans-serif;
-        margin: 0;
-        font-weight: 400;
-        font-size: 36px;
-        color: #fff;
-        text-transform: capitalize;
-        line-height: 1.2;
-        letter-spacing: 5px;
-    }
+
+    background: $themeColor;
+    width: 100px;
+    height: 2px;
+  }
+
+  h2 {
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
+    font-weight: 400;
+    font-size: 36px;
+    color: #fff;
+    text-transform: capitalize;
+    line-height: 1.2;
+    letter-spacing: 5px;
+  }
 }
