--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,6 +23,8 @@
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 10;
+
       width: 100%;
       height: 70px;
 
